@@ -1,7 +1,9 @@
 Changelog
 =========
 
-In next release ...
+- Move implementation-specific context setup to ``render``
+  method. This allows use of template class with an already prepared
+  context.
 
 - Fixed issue with the call flag on the Zope traverser compiler.
 
